--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,8 @@ name = "pypi"
 
 [packages]
 pytest = "*"
-pyrecommendg3 = {editable = true, path = "."}
+e = "*"
+pyrecommendg3 = {path = "."}
 
 [dev-packages]
 
