--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ name = "pypi"
 [packages]
 pytest = "*"
 e = "*"
-pyrecommendg3 = {path = "."}
+pyrecommendg3 = {editable = true, path = "."}
 
 [dev-packages]
 
